--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -61,6 +61,12 @@ repos:
       - id: yamllint
         name: "YAML Style Checking"
 
+  - repo: https://github.com/renovatebot/pre-commit-hooks
+    rev: 37.67.3
+    hooks:
+      - id: renovate-config-validator
+        name: "Renovate Config Checking"
+
   - repo: https://github.com/yunojuno/pre-commit-xenon
     rev: v0.1
     hooks:
